--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsup ./src",
     "test": "jest"
   },
   "keywords": [],
@@ -15,6 +23,7 @@
     "@types/jest": "^29.5.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "tsup": "^8.0.1",
     "typescript": "^5.2.2"
   }
 }
