--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/archiver": "^6.0.2",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "tsup": "^8.0.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "archiver": "^6.0.1"
   }
 }
