--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@types/archiver": "^6.0.2",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
+    "@types/uuid": "^9.0.7",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "tsup": "^8.0.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "archiver": "^6.0.1"
+    "archiver": "^6.0.1",
+    "uuid": "^9.0.1"
   }
 }
