--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "xlsx-kaku",
   "version": "0.1.1",
   "description": "Nodejs library for writing Excel xlsx files.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/motinados/xlsx-kaku.git"
+  },
   "sideEffects": false,
   "type": "module",
   "exports": {
