--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
     "@types/uuid": "^9.0.7",
+    "fast-xml-parser": "^4.3.2",
+    "fflate": "^0.8.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "tsup": "^8.0.1",
