--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - uses: pnpm/action-setup@v2.2.2
+      with:
+        verison: 8.10.2
+    - run: pnpm i
     - run: npm run build --if-present
     - run: npm test
